# xf86-video-crime

./: COPYING  Makefile.am  README  autogen.sh  configure.ac
man/: Makefile.am  crime.4
src/: Makefile.am  crime.h  crime_accel.c  crime_cursor.c  crime_driver.c  crmfbreg.h
